cosmetic (improve layout and test overlap issue), and add cache for faster page loads

--- a/dgs/static/css/scrolling-nav.css
+++ b/dgs/static/css/scrolling-nav.css
@@ -31,6 +31,7 @@ html {
 The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children 
 of those sections to manage the look and feel of the site. */
 
+/*
 .intro-section {
     height: 100%;
     padding-top: 150px;
@@ -58,3 +59,20 @@ of those sections to manage the look and feel of the site. */
     text-align: center;
     background: #eee;
 }
+*/
+
+
+
+.even-section {
+    padding-top: 150px;
+    text-align: center;
+    background: #fff;
+}
+
+
+.odd-section {
+    padding-top: 150px;
+    text-align: center;
+    background: #eee;
+}
+
